Add shredded chicken section and link

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 
 <body>
     <h1>Odin Recipes</h1>
+        <h2>Shredded Chicken</h2>
+        <p>Please see the link to the shredded chicken page:
+            <a href="recipes/shrdchicken.html">Recipe</a>
+        </p>
 
 </body>
 </html>
