--- a/index.html
+++ b/index.html
@@ -12,5 +12,10 @@
             <a href="recipes/shrdchicken.html">Recipe</a>
         </p>
 
+        <h2>Fuzzy Navel</h2>
+            <p>Please see the link to the fuzzy navel cocktail page:
+                <a href="recipes/fzzynvl.html">Recipe</a>
+            </p>
+
 </body>
 </html>
