add description, ingredients, steps, memo

--- a/recipes/fzzynvl.html
+++ b/recipes/fzzynvl.html
@@ -8,24 +8,25 @@
     <h1>Fuzzy Navel Cocktail</h1>
         <img src="https://www.liquor.com/thmb/3d6NLx5XLKkwWcyuRomcfMoOvPE=/720x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/__opt__aboutcom__coeus__resources__content_migration__liquor__2019__09__29203005__fuzzy-navel-720x720-recipe-951d651db96d46a7b726bc0a909a7b47.jpg" alt="Orange slice and green patterned straw in an orange, opaque liquid in a tall, skinny glass on a wooden table - light coming from the top left">
             <h5>Description</h5>
-                <p></p>
-            <h5>Ingredients</p>
+                <p>A light, citrus and peachy drink</p>
+            <h5>Ingredients</h5>>
                 <ul>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
+                    <li>One part peach schnapps</li>
+                    <li>One part Ketel One vodka</li>
+                    <li>4 parts orange juice</li>
+                    <li>Sliced orange</li>
+                    <li>Full glass of ice</li>
                 </ul>
             <h5>Steps</h5>
                 <ol>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
+                    <li>Add ice to glass</li>
+                    <li>Using a shotglass, pour all parts together</li>
+                    <li>Stir with a sharp knife for the Lingel touch *chef's kiss*</li>
+                    <li>Enjoy responsibly!</li>
                 </ol>
 
-            <p></p>
-            <p></p>
+            <p>This drink is one of my favorite drinks to enjoy when I want something fruity that packs a <strong>punch</strong>!</p>
+            <p>Discovered this drink at Christmas Eve with my aunt and it has been my favorite since!</p>
 
 </body>
 </html>
