remove extra > before  ingredient list

--- a/recipes/fzzynvl.html
+++ b/recipes/fzzynvl.html
@@ -9,7 +9,7 @@
         <img src="https://www.liquor.com/thmb/3d6NLx5XLKkwWcyuRomcfMoOvPE=/720x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/__opt__aboutcom__coeus__resources__content_migration__liquor__2019__09__29203005__fuzzy-navel-720x720-recipe-951d651db96d46a7b726bc0a909a7b47.jpg" alt="Orange slice and green patterned straw in an orange, opaque liquid in a tall, skinny glass on a wooden table - light coming from the top left">
             <h5>Description</h5>
                 <p>A light, citrus and peachy drink</p>
-            <h5>Ingredients</h5>>
+            <h5>Ingredients</h5>
                 <ul>
                     <li>One part peach schnapps</li>
                     <li>One part Ketel One vodka</li>
