Add chips and cheese link

--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
             <p>Please see the link to the fuzzy navel cocktail page:
                 <a href="recipes/fzzynvl.html">Recipe</a>
             </p>
+        <h2>Chips and Cheese</h2>
+            <p>Please see the link to the chips and cheese page:
+                <a href="recipes/chipsncheese.html">Recipe</a>
+            </p>
 
 </body>
 </html>
